add more feature

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,7 +6,7 @@
         <a class="navbar-brand" href="/books?auth={{$.auth}}">
           Home
         </a>
-        <a class="navbar-brand" href="/addBook?auth={{$.auth}}">
+        <a class="navbar-brand" href="/add-book?auth={{$.auth}}">
           Add Book
         </a>
       </div>
